Update my time table.html
changes

--- a/files/my time table.html
+++ b/files/my time table.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 <head>
 	<title>My Time Table </title>
@@ -6,6 +6,9 @@
 		table, th, td 
 		{
 		border:1px solid black;
+		}
+		{
+		border:separate;
 		}
 		th
 		{
@@ -31,7 +34,7 @@
 		</tr>
 		
 		<tr>
-			<td >7:30 - 7:50 AM </td>
+			<td style = "background-color: #ADD8E6">7:30 - 7:50 AM </td>
 			<td style = "font-weight:bold"> Flag Ceremony </td>
 			<td> Homeroom</td>
 			<td> Homeroom</td>
@@ -41,7 +44,7 @@
 		</tr>
 		
 		<tr>
-			<td>7:50 - 8:40 AM </td>
+			<td style = "background-color: #ADD8E6">7:50 - 8:40 AM </td>
 			<td> Homeroom </td>
 			<td style = "background-color: lime" rowspan = "2"> Statistics 1 </td>
 			<td> Biology 1 </td>
@@ -51,7 +54,7 @@
 		</tr>
 		
 		<tr>
-			<td>8:40 - 9:30 AM </td>
+			<td style = "background-color: #ADD8E6">8:40 - 9:30 AM </td>
 			<td> Chemistry 1 </td>
 			<td> Mathematics 3 </td>
 			<td> PE 3 </td>
@@ -59,13 +62,13 @@
 		</tr>
 		
 		<tr>
-			<td>9:30 - 9:45 AM </td>
+			<td style = "background-color: #ADD8E6">9:30 - 9:45 AM </td>
 			<td style = "font-weight:bold; background-color: yellow" colspan = "5" align = "center" > Recess </td>
 			<td colspan = "2" align = "center">Sleep</td>
 		</tr>
 
 		<tr>
-			<td>9:45 - 10:35 AM </td>
+			<td style = "background-color: #ADD8E6">9:45 - 10:35 AM </td>
 			<td>Health 3 </td>
 			<td> English 3 </td>
 			<td style = "background-color: lime" rowspan = "2">Chemistry 1 </td>
@@ -75,7 +78,7 @@
 		</tr>
 		
 		<tr>
-			<td>10:35 - 11:25 AM </td>
+			<td style = "background-color: #ADD8E6">10:35 - 11:25 AM </td>
 			<td> Social Science 3 </td>
 			<td> Social Science 3 </td>
 			<td> Music 3 </td>
@@ -83,14 +86,14 @@
 		</tr>
 		
 		<tr>
-			<td>11:25 - 12:15 PM </td>
+			<td style = "background-color: #ADD8E6">11:25 - 12:15 PM </td>
 			<td style = "font-weight:bold;background-color: yellow" colspan = "5" align = "center"> Lunch </td>
 			<td>Play</td>
 			<td style = "background-color: lime" rowspan = "2"> Church </td>
 		</tr>
 		
 		<tr>
-			<td>12:15 - 1:05 PM </td>
+			<td style = "background-color: #ADD8E6">12:15 - 1:05 PM </td>
 			<td> Statistics 1 </td>
 			<td> Filipino 3 </td>
 			<td> Social Science 3 </td>
@@ -100,7 +103,7 @@
 		</tr>
 		
 		<tr>
-			<td>1:05 - 1:55 PM </td>
+			<td style = "background-color: #ADD8E6">1:05 - 1:55 PM </td>
 			<td> Values Education 3 </td>
 			<td> Mathematics 3 </td>
 			<td> Physics 1 </td>
@@ -109,13 +112,13 @@
 		</tr>
 		
 		<tr>
-			<td>1:55 - 2:10 PM </td>
+			<td style = "background-color: #ADD8E6">1:55 - 2:10 PM </td>
 			<td style = "font-weight: bold; background-color: yellow" colspan = "5" align = "center" > Recess </td>
 			<td colspan = "2" align = "center"> Snack </td>
 		</tr>
 		
 		<tr>
-			<td>2:10 - 3:00 PM </td>
+			<td style = "background-color: #ADD8E6">2:10 - 3:00 PM </td>
 			<td>English 3</td>
 			<td></td>
 			<td>Filipino 3</td>
@@ -125,7 +128,7 @@
 		</tr>
 		
 		<tr>
-			<td>3:00 - 3:50 PM </td>
+			<td style = "background-color: #ADD8E6">3:00 - 3:50 PM </td>
 			<td>Filipino 3</td>
 			<td></td>
 			<td style = "background-color: lime" rowspan = "2"> Alternative Learning Activities </td>
@@ -134,7 +137,7 @@
 		</tr>
 		
 		<tr>
-			<td>3:50 - 4:40 PM</td>
+			<td style = "background-color: #ADD8E6">3:50 - 4:40 PM</td>
 			<td></td>
 			<td></td>
 			<td></td>
